# wonder

./: .env.example  .gitignore  CHANGES_SUMMARY.md  HACKATHON_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md  TESTING_GUIDE.md  WONDER_AI_DAW.md  WONDER_BRIEF.md  WONDER_MD_IMPLEMENTATION.md  WONDER_REPORT.md  ableton_test.py  features.md  skills-lock.json  test_results.md  thenewway.md  wonder.md  wonderidea.md
.claude/: settings.local.json
SAMPLES2/drumslaptop copy/KOMMUNIST KIT VOL 2 v1/: ,Royalty stuff.txt
Zach_Ideas/: ElevenLabs.md  MongoDB_Atlas.md  Snowflake.md
ableton-mcp/: pyproject.toml
ableton-mcp/AbletonMCP_Remote_Script/: __init__.py
ableton-mcp/MCP_Server/: audio_to_midi.py  requirements-rest.txt  rest_api_server.py  server.py
ableton-mcp/MCP_Server/midi_storage/: melody_065da8d6.mid  melody_0e035e4b.mid  melody_38c83896.mid  (+6 more)
ableton-mcp/ableton_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/: .env.example  pyproject.toml  requirements.txt  server.py  server_lite.py
backend/.claude/: settings.local.json
backend/agent/: pyproject.toml
backend/agent/.claude/: settings.local.json
backend/agent/agent/: agent.py  logging_config.py  server.py  wonder_prompt.py
backend/agent/agent/agents/: __init__.py  composition.py  sound_design.py  stem_separator.py
backend/agent/agent/analytics/: events.py  preferences.py  snowflake_client.py
backend/agent/agent/db/: __init__.py  mongo_session_service.py
backend/agent/agent/tools/: ableton.py  audio.py  samples.py  session_state.py  soundgen.py
backend/api/: analyze.py  generation.py
backend/server/: __app__.py  __init__.py  _handlers.py  pyproject.toml  requirements.txt  rest.py
backend/server/mongo/: __init__.py  client.py  models.py  repository.py  snowflake_events.py
backend/server/scripts/: seed_zach_dummy.py  smoke_mongo_api.sh
backend/server/server/: mcp.py  rest.py
backend/server/server/api/: __init__.py  mongo_routes.py
backend/server/server/mongo/: README.md  client.py  models.py  repository.py  snowflake_client.py  snowflake_events.py
backend/server/server/utils/: audio_to_midi.py
backend/server/services/: snowflake_agent.py
backend/services/: elevenlabs_service.py  generation_orchestrator.py  intent_agent.py  retrieval_agent.py  sample_compare.py  sample_database.py  sample_generation.py  sample_indexing.py  sample_search.py  sample_selection.py
backend/soundgen/: __init__.py  _client.py  _generate.py  _prompt.py  _reference.py  _types.py  cli.py
backend/soundsplit/: __init__.py  _audio.py  _core.py  _preprocess.py  _writer.py  cli.py  pyproject.toml
backend/soundsplit/extractors/: __init__.py  midi.py  stems.py
backend/soundsplit/soundsplit/: __init__.py  _audio.py  _core.py  _types.py  _writer.py
backend/soundsplit/soundsplit/extractors/: __init__.py  beatbox.py  monophonic.py  tempo.py
backend/tests/: generation_eval_cases.json  helpers.py  test_elevenlabs_service.py  test_generation_api.py  test_intent_and_retrieval_agents.py  test_model_backed_agents.py  test_sample_api.py  test_sample_generation.py  test_sample_indexing.py  test_sample_selection.py  test_sample_services.py
backend/tools/: index_samples.py
backend_but_better/: .env.example  main.py  pyproject.toml  server.py
backend_but_better/api/: analyze.py  generate_instrument.md  generation.py  samples.py
backend_but_better/backend/: pyproject.toml  server.py
backend_but_better/backend/agent/agent/: agent.py
backend_but_better/backend/agent/agent/analytics/: __init__.py  snowflake_client.py
backend_but_better/backend/agent/agent/tools/: __init__.py  ableton.py
backend_but_better/backend/server/: requirements.txt
backend_but_better/backend/server/server/: rest.py
backend_but_better/backend/server/server/mongo/: README.md  client.py
backend_but_better/backend/soundgen/: pyproject.toml
backend_but_better/backend/soundsplit/: pyproject.toml
backend_but_better/backend/soundsplit/soundsplit/extractors/: detect_input.py  key.py
backend_but_better/samples/Drums copy/hats/: hh3.wav.asd  hh4.wav.asd  hh5.wav.asd
backend_but_better/samples/Drums copy/percussion/claps/: 1.sfk  cl1.sfk
backend_but_better/services/: agent_model_client.py  db_service_plan.md  elevenlabs_service.py  generation_mvp_plan.md  generation_orchestrator.py  sample_database.py  sample_embedding.py  sample_generation.py  sample_models.py  sample_search.py
backend_but_better/tests/: helpers.py  test_generation_api.py  test_generation_eval_cases.py  test_generation_orchestrator.py  test_sample_api.py  test_sample_compare.py  test_sample_generation.py  test_sample_indexing.py  test_sample_services.py
backend_but_better/tools/: index_samples.md
frontend/: README.md  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/public/: samples.json  wonderprofile.json
frontend/src/: proxy.ts
kori-mcp/: INSTALLATION.md  README.md
kori-mcp/AbletonMCP_Remote_Script/: __init__.py
plan/: auth.md
tagging/: README.md  inspect_lancedb.py  search.py  tagging.py  tagging_requirements.txt  tagging_test.py
(+195 files in other folders)
