[project]
name = "backend-but-better"
version = "0.1.0"
description = "FastAPI server bootstrap"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
start = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
