[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "soundsplit",
    "soundgen",
    "google-adk>=1.27.2",
]

[tool.uv.sources]
soundsplit = { workspace = true }
soundgen   = { workspace = true }

# [project.scripts]
# agent = ""

[tool.hatch.build.targets.wheel]
packages = ["agent"]
