[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soundsplit"
version = "0.1.0"
description = "Split audio into DAW-ready components: stems, MIDI, tempo, and key."
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10",
    "soundfile>=0.12",
    "pydub>=0.25",
    "pretty_midi>=0.2",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
stems = ["demucs>=4.0"]
midi = ["basic-pitch>=0.3"]
all = ["soundsplit[stems,midi]"]

[project.scripts]
soundsplit = "soundsplit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["soundsplit"]
