[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soundgen"
version = "0.1.0"
description = "Generate sounds via the ElevenLabs API from structured parameters or natural language."
requires-python = ">=3.10"
dependencies = [
    "elevenlabs>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
reference = ["librosa>=0.10", "soundfile>=0.12"]
soundsplit = ["soundsplit"]

[tool.uv.sources]
soundsplit = { workspace = true }

[project.scripts]
soundgen = "soundgen.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["soundgen"]
